--- a/MauiAppExample/View/ProductPage.xaml
+++ b/MauiAppExample/View/ProductPage.xaml
@@ -13,7 +13,7 @@
             VerticalOptions="Center">
 
             <Label Style="{StaticResource LabelCustom}" Text="A message: "></Label> 
-            <Label Text="{Binding Msg}"/>
+            <Label Text="{Binding Msg}" Style="{StaticResource LabelCustom}"/>
         </VerticalStackLayout>
     </ScrollView>
 
