--- a/MauiAppExample/Resources/Styles/Styles.xaml
+++ b/MauiAppExample/Resources/Styles/Styles.xaml
@@ -5,7 +5,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
     
     <Style TargetType="Label" x:Key="LabelCustom">
-        <Setter Property="FontSize" Value="{OnPlatform iOS=28, MacCatalyst=48}"></Setter>
+        <Setter Property="FontSize" Value="{OnPlatform iOS=28, MacCatalyst=48, WinUI=48}"></Setter>
     </Style>
 
     <Style TargetType="ActivityIndicator">
