--- a/MauiAppExample/View/MainPage.xaml
+++ b/MauiAppExample/View/MainPage.xaml
@@ -21,17 +21,18 @@
     </ContentPage.ToolbarItems>
 
 
-    <Grid RowDefinitions="*">
-        <RefreshView Grid.Row="0" IsRefreshing="{Binding IsRefreshing}" Command="{Binding LoadPostsCommand}">
+    <Grid RowDefinitions="Auto,*">
+        <Button Grid.Row="0" Text="Prova" Command="{Binding PickerCommand}"/>
+        <RefreshView Grid.Row="1" IsRefreshing="{Binding IsRefreshing}" Command="{Binding LoadPostsCommand}">
             <Grid>
-                <CollectionView ItemsSource="{Binding Posts}">
+                <CollectionView ItemsSource="{Binding Posts}" Margin="10,10,10,10">
                     <CollectionView.ItemTemplate>
                         <DataTemplate x:DataType="model:Post">
-                            <Grid Padding="10" Margin="0,20,0,20" RowDefinitions="Auto, Auto" ColumnDefinitions="*, auto">
-                                <Label Grid.Row="0" Grid.Column="0" FontSize="32" Text="{Binding Title}" Margin="0,0,0,10"/>
-                                <Button Text="&#xe941;" Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:MainPageViewModel}}, Path=InspectCommand}" CommandParameter="{Binding .}" FontSize="20" FontFamily="Material" Grid.Row="0" Grid.Column="1" WidthRequest="80" HorizontalOptions="Start"/>
-                                <Label Grid.Row="1" Grid.Column="0" FontSize="23" Text="{Binding Description}" Margin="0,0,0,10"/>
-                            </Grid>
+                            <VerticalStackLayout x:DataType="model:Post" Margin="10,30,0,0">
+                                <Label FontSize="32" Text="{Binding Title}" Margin="0,0,0,10"/>
+                                <Label FontSize="18" Text="{Binding FullText, Converter={StaticResource MarkdownConverter}}" TextType="Html"/>
+                                <Button Text="Read More" Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:MainPageViewModel}}, Path=InspectCommand}" CommandParameter="{Binding .}" FontSize="15" Grid.Row="2" HorizontalOptions="Start"/>
+                            </VerticalStackLayout>
                         </DataTemplate>
                     </CollectionView.ItemTemplate>
                 </CollectionView>
