feat: complete app with test example

--- a/MauiAppExample/AppShell.xaml
+++ b/MauiAppExample/AppShell.xaml
@@ -7,13 +7,11 @@
     xmlns:view="clr-namespace:MauiAppExample.View"
     Shell.FlyoutBehavior="Disabled">
 
-    <!--Login Page-->
     <ShellContent
         Title="Login"
         ContentTemplate="{DataTemplate view:LoginPage}"
         Route="LoginPage"/>
 
-    <!--Main Page-->
     <ShellContent
         Title="Home"
         ContentTemplate="{DataTemplate view:MainPage}"
@@ -24,6 +22,11 @@
         Title="Insert"
         ContentTemplate="{DataTemplate view:InsertPage}"
         Route="InsertPage" />
+
+    <ShellContent
+        Title="Details"
+        ContentTemplate="{DataTemplate view:DetailPage}"
+        Route="DetailPage"/>
 
 
 </Shell>
